MAPREDUCE-852. In build.xml, remove the Main-Class, which is incorrectly set in tools, and rename the target "tools-jar" to "tools".
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@805081 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -403,3 +403,5 @@ Trunk (unreleased changes)
     MAPREDUCE-877. Added avro as a dependency to contrib ivy settings.
     (Tsz Wo (Nicholas) Sze via yhemanth)
 
+    MAPREDUCE-852. In build.xml, remove the Main-Class, which is incorrectly
+    set in tools, and rename the target "tools-jar" to "tools".  (szetszwo)
