MAPREDUCE-773. Sends progress reports for compressed gzip inputs in maps. Fixes a native direct buffer leak in LineRecordReader classes. Contributed by Hong Tang and Devaraj Das.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@805324 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -405,3 +405,7 @@ Trunk (unreleased changes)
 
     MAPREDUCE-852. In build.xml, remove the Main-Class, which is incorrectly
     set in tools, and rename the target "tools-jar" to "tools".  (szetszwo)
+
+    MAPREDUCE-773. Sends progress reports for compressed gzip inputs in maps.
+    Fixes a native direct buffer leak in LineRecordReader classes.
+    (Hong Tang and ddas)
