--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -413,3 +413,6 @@ Trunk (unreleased changes)
     MAPREDUCE-832. Reduce number of warning messages printed when
     deprecated memory variables are used. (Rahul Kumar Singh via yhemanth)
 
+    MAPREDUCE-745. Fixes a testcase problem to do with generation of JobTracker
+    IDs. (Amar Kamat via ddas)
+
