--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -213,6 +213,9 @@ Trunk (unreleased changes)
       deprecated mapred.child.ulimit
     (acmurthy)
 
+    MAPREDUCE-157. Remove the dependence on the CLI 2.0 snapshot.
+    (Amar Kamat via omalley)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
