MAPREDUCE-712. Minor efficiency tweaks to RandomTextWriter.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@806408 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -216,6 +216,8 @@ Trunk (unreleased changes)
     MAPREDUCE-767. Remove the dependence on the CLI 2.0 snapshot.
     (Amar Kamat via omalley)
 
+    MAPREDUCE-712. Minor efficiency tweaks to RandomTextWriter. (cdouglas)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
