MAPREDUCE-818. Fixes Counters#getGroup API. Contributed by Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@806504 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -425,3 +425,6 @@ Trunk (unreleased changes)
     memory management parameters are used in configuration.
     (Sreekanth Ramakrishnan via yhemanth)
 
+    MAPREDUCE-818. Fixes Counters#getGroup API. (Amareshwari Sriramadasu 
+    via sharad)
+
