MAPREDUCE-870. Remove the job retire thread and the associated config parameters.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@806508 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -218,6 +218,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-712. Minor efficiency tweaks to RandomTextWriter. (cdouglas)
 
+    MAPREDUCE-870. Remove the job retire thread and the associated 
+    config parameters. (sharad)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
