MAPREDUCE-749. Make Sqoop unit tests more Hudson-friendly. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@806558 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -221,6 +221,9 @@ Trunk (unreleased changes)
     MAPREDUCE-870. Remove the job retire thread and the associated 
     config parameters. (sharad)
 
+    MAPREDUCE-749. Make Sqoop unit tests more Hudson-friendly.
+    (Aaron Kimball via tomwhite)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
