MAPREDUCE-874. Rename the PiEstimator example to QuasiMonteCarlo.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@806733 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -227,6 +227,9 @@ Trunk (unreleased changes)
     MAPREDUCE-749. Make Sqoop unit tests more Hudson-friendly.
     (Aaron Kimball via tomwhite)
 
+    MAPREDUCE-874. Rename the PiEstimator example to QuasiMonteCarlo.
+    (szetszwo)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
