--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -23,6 +23,10 @@ Trunk (unreleased changes)
     MAPREDUCE-711. Moved Distributed Cache from Common to Map/Reduce
     project. (Vinod Kumar Vavilapalli via yhemanth)
 
+    MAPREDUCE-895. Per the contract elucidated in HADOOP-6201, throw
+    FileNotFoundException from FileSystem::listStatus rather than returning
+    null. (Jakob Homan via cdouglas)
+
   NEW FEATURES
 
     MAPREDUCE-706. Support for FIFO pools in the fair scheduler.
