MAPREDUCE-336. Allow logging level of map/reduce tasks to be configurable. Configuration changes:   add mapred.map.child.log.level   add mapred.reduce.child.log.level
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@806764 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -234,6 +234,12 @@ Trunk (unreleased changes)
     MAPREDUCE-874. Rename the PiEstimator example to QuasiMonteCarlo.
     (szetszwo)
 
+    MAPREDUCE-336. Allow logging level of map/reduce tasks to be configurable. 
+    Configuration changes:
+      add mapred.map.child.log.level 
+      add mapred.reduce.child.log.level 
+    (acmurthy)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
