MAPREDUCE-355. Update mapred.join package to use the new API. Contributed by Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@807096 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -243,6 +243,9 @@ Trunk (unreleased changes)
       add mapred.reduce.child.log.level 
     (acmurthy)
 
+    MAPREDUCE-355. Update mapred.join package to use the new API. (Amareshwari
+    Sriramadasu via cdouglas)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
