HADOOP-6184. Updated hadoop common and test jars to get the new API in Configuration for dumping in JSON format from Hudson trunk build #68.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@807532 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -249,6 +249,10 @@ Trunk (unreleased changes)
     MAPREDUCE-355. Update mapred.join package to use the new API. (Amareshwari
     Sriramadasu via cdouglas)
 
+    HADOOP-6184. Updated hadoop common and test jars to get the new API
+    in Configuration for dumping in JSON format from Hudson trunk build #68.
+    (yhemanth)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
