MAPREDUCE-476. Extend DistributedCache to work locally (LocalJobRunner). Contributed by Philip Zeyliger.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@807543 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -253,6 +253,9 @@ Trunk (unreleased changes)
     in Configuration for dumping in JSON format from Hudson trunk build #68.
     (yhemanth)
 
+    MAPREDUCE-476. Extend DistributedCache to work locally (LocalJobRunner).
+    (Philip Zeyliger via tomwhite)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
