MAPREDUCE-768. Provide an option to dump jobtracker configuration in JSON format to standard output. Contributed by V.V.Chaitanya Krishna.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@807640 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -75,6 +75,9 @@ Trunk (unreleased changes)
     MAPREDUCE-798. MRUnit should be able to test a succession of MapReduce
     passes. (Aaron Kimball via tomwhite)
 
+    MAPREDUCE-768. Provide an option to dump jobtracker configuration in JSON
+    format to standard output. (V.V.Chaitanya Krishna via yhemanth)
+
   IMPROVEMENTS
 
     MAPREDUCE-816. Rename "local" mysql import to "direct" in Sqoop.
