MAPREDUCE-370. Change org.apache.hadoop.mapred.lib.MultipleOutputs and org.apache.hadoop.mapred.lib.MultipleOutputFormat to use new api. Contributed by Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@807908 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -259,6 +259,10 @@ Trunk (unreleased changes)
     MAPREDUCE-476. Extend DistributedCache to work locally (LocalJobRunner).
     (Philip Zeyliger via tomwhite)
 
+    MAPREDUCE-370. Change org.apache.hadoop.mapred.lib.MultipleOutputs
+    and org.apache.hadoop.mapred.lib.MultipleOutputFormat to use new api.
+    (Amareshwari Sriramadasu via sharad)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
