MAPREDUCE-750. Extensible ConnManager factory API. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@807934 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -263,6 +263,9 @@ Trunk (unreleased changes)
     and org.apache.hadoop.mapred.lib.MultipleOutputFormat to use new api.
     (Amareshwari Sriramadasu via sharad)
 
+    MAPREDUCE-750. Extensible ConnManager factory API. (Aaron Kimball via
+    tomwhite)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
