MAPREDUCE-825. JobClient completion poll interval of 5s causes slow tests in local mode. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@807940 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -266,6 +266,9 @@ Trunk (unreleased changes)
     MAPREDUCE-750. Extensible ConnManager factory API. (Aaron Kimball via
     tomwhite)
 
+    MAPREDUCE-825. JobClient completion poll interval of 5s causes slow tests
+    in local mode. (Aaron Kimball via tomwhite)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
