MAPREDUCE-910. Support counters in MRUnit. Contributed by Aaron Kimball
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@807942 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -269,6 +269,8 @@ Trunk (unreleased changes)
     MAPREDUCE-825. JobClient completion poll interval of 5s causes slow tests
     in local mode. (Aaron Kimball via tomwhite)
 
+    MAPREDUCE-910. Support counters in MRUnit. (Aaron Kimball via cdouglas)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
