--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -271,6 +271,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-910. Support counters in MRUnit. (Aaron Kimball via cdouglas)
 
+    MAPREDUCE-788. Update gridmix2 to use the new API (Amareshwari Sriramadasu
+    via cdouglas)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
