--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -78,6 +78,9 @@ Trunk (unreleased changes)
     MAPREDUCE-768. Provide an option to dump jobtracker configuration in JSON
     format to standard output. (V.V.Chaitanya Krishna via yhemanth)
 
+    MAPREDUCE-824. Add support for a hierarchy of queues in the capacity 
+    scheduler. (Rahul Kumar Singh via yhemanth)
+
   IMPROVEMENTS
 
     MAPREDUCE-816. Rename "local" mysql import to "direct" in Sqoop.
