MAPREDUCE-875. Make DBRecordReader execute queries lazily. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@808320 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -277,6 +277,9 @@ Trunk (unreleased changes)
     MAPREDUCE-788. Update gridmix2 to use the new API (Amareshwari Sriramadasu
     via cdouglas)
 
+    MAPREDUCE-875. Make DBRecordReader execute queries lazily. (Aaron Kimball 
+    via enis)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
