--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -500,3 +500,6 @@ Trunk (unreleased changes)
     MAPREDUCE-871. Fix ownership of Job/Task local files to have correct 
     group ownership according to the egid of the tasktracker.
     (Vinod Kumar Vavilapalli via yhemanth) 
+
+    MAPREDUCE-911. Fix a bug in TestTaskFail related to speculative 
+    execution. (Amareshwari Sriramadasu via sharad)
