MAPREDUCE-687. Fix an assertion in TestMiniMRMapRedDebugScript. Contributed by Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@809843 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -503,3 +503,7 @@ Trunk (unreleased changes)
 
     MAPREDUCE-911. Fix a bug in TestTaskFail related to speculative 
     execution. (Amareshwari Sriramadasu via sharad)
+
+    MAPREDUCE-687. Fix an assertion in TestMiniMRMapRedDebugScript.
+    (Amareshwari Sriramadasu via sharad)
+
