--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -280,6 +280,9 @@ Trunk (unreleased changes)
     MAPREDUCE-875. Make DBRecordReader execute queries lazily. (Aaron Kimball 
     via enis)
 
+    MAPREDUCE-873. Simplify job recovery. InComplete jobs are resubmitted on 
+    jobtracker restart. (sharad)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
