MAPREDUCE-903. Add Avro jar to eclipse classpath. Contributed by Philip Zeyliger.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@811566 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -513,3 +513,5 @@ Trunk (unreleased changes)
     MAPREDUCE-924. Fixes the TestPipes testcase to use Tool.
     (Amareshwari Sriramadasu via sharad)
 
+    MAPREDUCE-903. Add Avro jar to eclipse classpath.
+    (Philip Zeyliger via tomwhite)
