MAPREDUCE-936. Allow a load difference for fairshare scheduler. (Zheng Shao via dhruba)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@811569 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -283,6 +283,9 @@ Trunk (unreleased changes)
     MAPREDUCE-318. Modularizes the shuffle code. (Jothi Padmanabhan and 
     Arun Murthy via ddas)
 
+    MAPREDUCE-936. Allow a load difference for fairshare scheduler.
+    (Zheng Shao via dhruba)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
