MAPREDUCE-370. Update MultipleOutputs to use the API, merge funcitonality of MultipleOutputFormat. Contributed by Amareshwari Sriramadasu
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@811582 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -286,6 +286,9 @@ Trunk (unreleased changes)
     MAPREDUCE-936. Allow a load difference for fairshare scheduler.
     (Zheng Shao via dhruba)
 
+    MAPREDUCE-370. Update MultipleOutputs to use the API, merge funcitonality
+    of MultipleOutputFormat. (Amareshwari Sriramadasu via cdouglas)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
