MAPREDUCE-943. Removes a testcase in TestNodeRefresh that doesn't make sense in the new Job recovery model. Contributed by Amar Kamat.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@812002 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -521,3 +521,6 @@ Trunk (unreleased changes)
 
     MAPREDUCE-903. Add Avro jar to eclipse classpath.
     (Philip Zeyliger via tomwhite)
+
+    MAPREDUCE-943. Removes a testcase in TestNodeRefresh that doesn't make 
+    sense in the new Job recovery model. (Amar Kamat via ddas)
