MAPREDUCE-898. Changes DistributedCache to use the new API. Contributed by Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@812079 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -289,6 +289,9 @@ Trunk (unreleased changes)
     MAPREDUCE-370. Update MultipleOutputs to use the API, merge funcitonality
     of MultipleOutputFormat. (Amareshwari Sriramadasu via cdouglas)
 
+    MAPREDUCE-898. Changes DistributedCache to use the new API.
+    (Amareshwari Sriramadasu via ddas)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
