MAPREDUCE-918. Test hsqldb server should be memory-only. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@812092 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -295,6 +295,9 @@ Trunk (unreleased changes)
     MAPREDUCE-876. Sqoop import of large tables can time out.
     (Aaron Kimball via tomwhite)
 
+    MAPREDUCE-918. Test hsqldb server should be memory-only.
+    (Aaron Kimball via tomwhite)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
