--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -533,3 +533,6 @@ Trunk (unreleased changes)
 
     MAPREDUCE-943. Removes a testcase in TestNodeRefresh that doesn't make 
     sense in the new Job recovery model. (Amar Kamat via ddas)
+
+    MAPREDUCE-764. TypedBytesInput's readRaw() does not preserve custom type
+    codes. (Klaas Bosteels via tomwhite)
