HADOOP-6243. Fixes a NullPointerException in handling deprecated keys. Contributed by Sreekanth Ramakrishnan.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@812473 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -539,3 +539,7 @@ Trunk (unreleased changes)
 
     MAPREDUCE-764. TypedBytesInput's readRaw() does not preserve custom type
     codes. (Klaas Bosteels via tomwhite)
+
+    HADOOP-6243. Fixes a NullPointerException in handling deprecated keys.
+    (Sreekanth Ramakrishnan via yhemanth)
+
