MAPREDUCE-938. Postgresql support for Sqoop. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@812486 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -91,6 +91,8 @@ Trunk (unreleased changes)
     logs and generating job traces for simulation and analysis. (Dick King via
     cdouglas)
 
+    MAPREDUCE-938. Postgresql support for Sqoop. (Aaron Kimball via tomwhite)	
+
   IMPROVEMENTS
 
     MAPREDUCE-816. Rename "local" mysql import to "direct" in Sqoop.
