--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -303,6 +303,10 @@ Trunk (unreleased changes)
     MAPREDUCE-918. Test hsqldb server should be memory-only.
     (Aaron Kimball via tomwhite)
 
+    MAPREDUCE-144. Includes dump of the process tree in task diagnostics when 
+    a task is killed due to exceeding memory limits.
+    (Vinod Kumar Vavilapalli via yhemanth)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
