MAPREDUCE-960. Remove an unnecessary intermediate copy and obsolete API from KeyValueLineRecordReader.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@813116 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -315,6 +315,9 @@ Trunk (unreleased changes)
     replace it with o.a.h.fs.FileAlreadyExistsException.  (Boris Shkolnik
     via szetszwo)
 
+    MAPREDUCE-960. Remove an unnecessary intermediate copy and obsolete API
+    from KeyValueLineRecordReader. (cdouglas)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
