MAPREDUCE-930. Modify Rumen to resolve paths in the canonical way, rather than defaulting to the local filesystem.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@813140 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -318,6 +318,9 @@ Trunk (unreleased changes)
     MAPREDUCE-960. Remove an unnecessary intermediate copy and obsolete API
     from KeyValueLineRecordReader. (cdouglas)
 
+    MAPREDUCE-930. Modify Rumen to resolve paths in the canonical way, rather
+    than defaulting to the local filesystem. (cdouglas)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
