MAPREDUCE-830. Add support for splittable compression to TextInputFormats. Contributed by Abdul Qadeer
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@813660 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -93,6 +93,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-938. Postgresql support for Sqoop. (Aaron Kimball via tomwhite)	
 
+    MAPREDUCE-830. Add support for splittable compression to TextInputFormats.
+    (Abdul Qadeer via cdouglas)
+
   IMPROVEMENTS
 
     MAPREDUCE-816. Rename "local" mysql import to "direct" in Sqoop.
