MAPREDUCE-973. Move FailJob and SleepJob from examples to test. (cdouglas via omalley)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@813944 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -328,6 +328,9 @@ Trunk (unreleased changes)
     to support regulating tasks for a job based on resources currently in use
     by that job. (dhruba)
 
+    MAPREDUCE-973. Move FailJob and SleepJob from examples to test. (cdouglas 
+    via omalley)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
