MAPREDUCE-966. Modify Rumen to clean up interfaces and simplify integration with other tools. Contributed by Hong Tang
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@814122 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -331,6 +331,9 @@ Trunk (unreleased changes)
     MAPREDUCE-973. Move FailJob and SleepJob from examples to test. (cdouglas 
     via omalley)
 
+    MAPREDUCE-966. Modify Rumen to clean up interfaces and simplify integration
+    with other tools. (Hong Tang via cdouglas)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
