MAPREDUCE-856. Setup secure permissions for distributed cache files. Contributed by Vinod Kumar Vavilapalli.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@814467 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -334,6 +334,9 @@ Trunk (unreleased changes)
     MAPREDUCE-966. Modify Rumen to clean up interfaces and simplify integration
     with other tools. (Hong Tang via cdouglas)
 
+    MAPREDUCE-856. Setup secure permissions for distributed cache files.
+    (Vinod Kumar Vavilapalli via yhemanth)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
