MAPREDUCE-885. More efficient SQL queries for DBInputFormat. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@814656 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -337,6 +337,9 @@ Trunk (unreleased changes)
     MAPREDUCE-856. Setup secure permissions for distributed cache files.
     (Vinod Kumar Vavilapalli via yhemanth)
 
+    MAPREDUCE-885. More efficient SQL queries for DBInputFormat. (Aaron Kimball 
+    via enis)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
