MAPREDUCE-968. NPE in distcp encountered when placing _logs directory on S3FileSystem. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@814713 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -582,3 +582,5 @@ Trunk (unreleased changes)
     HADOOP-6243. Fixes a NullPointerException in handling deprecated keys.
     (Sreekanth Ramakrishnan via yhemanth)
 
+    MAPREDUCE-968. NPE in distcp encountered when placing _logs directory on
+    S3FileSystem. (Aaron Kimball via tomwhite)
