MAPREDUCE-112. Add counters for reduce input, output records to the new API. Contributed by Jothi Padmanabhan
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@815162 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -590,3 +590,6 @@ Trunk (unreleased changes)
 
     MAPREDUCE-839. unit test TestMiniMRChildTask fails on mac os-x (hong tang
     via mahadev)
+
+    MAPREDUCE-112. Add counters for reduce input, output records to the new API.
+    (Jothi Padmanabhan via cdouglas)
