MAPREDUCE-284. Enables ipc.client.tcpnodelay in Tasktracker's Child. Contributed by Ravi Gummadi.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@815249 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -340,6 +340,9 @@ Trunk (unreleased changes)
     MAPREDUCE-885. More efficient SQL queries for DBInputFormat. (Aaron Kimball 
     via enis)
 
+    MAPREDUCE-284. Enables ipc.client.tcpnodelay in Tasktracker's Child.
+    (Ravi Gummadi via sharad)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
