MAPREDUCE-861. Add support for hierarchical queues in the Map/Reduce framework. Contributed by Rahul Kumar Singh.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@815605 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -96,6 +96,9 @@ Trunk (unreleased changes)
     MAPREDUCE-830. Add support for splittable compression to TextInputFormats.
     (Abdul Qadeer via cdouglas)
 
+    MAPREDUCE-861. Add support for hierarchical queues in the Map/Reduce
+    framework. (Rahul Kumar Singh via yhemanth)
+
   IMPROVEMENTS
 
     MAPREDUCE-816. Rename "local" mysql import to "direct" in Sqoop.
