--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -36,6 +36,9 @@ Trunk (unreleased changes)
     HADOOP-6230. Moved process tree and memory calculator related classes from
     Common to Map/Reduce. (Vinod Kumar Vavilapalli via yhemanth)
 
+    MAPREDUCE-157. Refactor job history APIs and change the history format to 
+    JSON. (Jothi Padmanabhan via sharad)
+
   NEW FEATURES
 
     MAPREDUCE-706. Support for FIFO pools in the fair scheduler.
