MAPREDUCE-977. Missing jackson jars from Eclipse template.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816115 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -612,3 +612,5 @@ Trunk (unreleased changes)
 
     MAPREDUCE-946. Fix a regression in LineRecordReader where the
     maxBytesToConsume parameter is not set correctly. (cdouglas)
+
+    MAPREDUCE-977. Missing jackson jars from Eclipse template. (tomwhite)
