MAPREDUCE-988. Fix a packaging issue in the contrib modules. Contributed by Hong Tang
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816135 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -614,3 +614,6 @@ Trunk (unreleased changes)
     maxBytesToConsume parameter is not set correctly. (cdouglas)
 
     MAPREDUCE-977. Missing jackson jars from Eclipse template. (tomwhite)
+
+    MAPREDUCE-988. Fix a packaging issue in the contrib modules. (Hong Tang via
+    cdouglas)
