MAPREDUCE-971. distcp does not always remove distcp.tmp.dir. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816236 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -620,3 +620,6 @@ Trunk (unreleased changes)
 
     MAPREDUCE-988. Fix a packaging issue in the contrib modules. (Hong Tang via
     cdouglas)
+
+    MAPREDUCE-971. distcp does not always remove distcp.tmp.dir. (Aaron Kimball
+    via tomwhite)
