MAPREDUCE-907. Sqoop should use more intelligent splits. Contributed by Aaron Kimball.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816240 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -355,6 +355,9 @@ Trunk (unreleased changes)
     MAPREDUCE-284. Enables ipc.client.tcpnodelay in Tasktracker's Child.
     (Ravi Gummadi via sharad)
 
+    MAPREDUCE-907. Sqoop should use more intelligent splits. (Aaron Kimball
+    via tomwhite)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
