MAPREDUCE-995. Fix a bug in JobHistory where tasks completing after the job is closed cause a NPE. Contributed by Jothi Padmanabhan
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816454 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -629,3 +629,6 @@ Trunk (unreleased changes)
 
     MAPREDUCE-971. distcp does not always remove distcp.tmp.dir. (Aaron Kimball
     via tomwhite)
+
+    MAPREDUCE-995. Fix a bug in JobHistory where tasks completing after the job
+    is closed cause a NPE. (Jothi Padmanabhan via cdouglas)
