MAPREDUCE-953. Fix QueueManager to dump queue configuration in JSON format. Contributed by V.V. Chaitanya Krishna.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@816471 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -632,3 +632,7 @@ Trunk (unreleased changes)
 
     MAPREDUCE-995. Fix a bug in JobHistory where tasks completing after the job
     is closed cause a NPE. (Jothi Padmanabhan via cdouglas)
+
+    MAPREDUCE-953. Fix QueueManager to dump queue configuration in JSON format.
+    (V.V. Chaitanya Krishna via yhemanth)
+
